--- a/Beesiness/appsettings.json
+++ b/Beesiness/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=beesiness1.cua5o6bce9d1.us-east-1.rds.amazonaws.com;Database=beesiness1;User Id=admin;Password=leica666;TrustServerCertificate=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
