--- a/Beesiness/appsettings.json
+++ b/Beesiness/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=beesiness1.cua5o6bce9d1.us-east-1.rds.amazonaws.com;Database=beesiness1;User Id=admin;Password=leica666;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=beesiness.cf2sm2u6e3f6.us-east-1.rds.amazonaws.com;Database=beesiness;User Id=admin;Password=leica666;TrustServerCertificate=True;"
     }
 }
