INICIO PROYECTO TÍTULO.

--- a/Beesiness/Beesiness.csproj
+++ b/Beesiness/Beesiness.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <Folder Include="Microsoft\AspNetCore\Identity\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
