INICIO PROYECTO TÍTULO.

--- a/Beesiness/appsettings.json
+++ b/Beesiness/appsettings.json
@@ -7,6 +7,9 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=beesiness.cf2sm2u6e3f6.us-east-1.rds.amazonaws.com;Database=beesiness;User Id=admin;Password=leica666;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=beesync.c16aj4gtisqu.us-east-1.rds.amazonaws.com;Database=beesync;User Id=admin;Password=romeral7244;TrustServerCertificate=True;"
+    },
+    "OpenAI": {
+        "ApiKey": "sk-None-kwvtBXmXjsagXpvgN6G1T3BlbkFJmvrJkmByrb1lpN68jLOA"
     }
 }
